<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <parent>
    <groupId>io.github.xezzon</groupId>
    <artifactId>xezzon-java</artifactId>
    <version>6.7</version>
  </parent>
  <artifactId>zeroweb-service</artifactId>
  <version>1.0-SNAPSHOT</version>
  <packaging>pom</packaging>

  <name>${project.groupId}:${project.artifactId}</name>
  <description>ZeroWeb 微服务构件</description>

  <modules>
    <module>zeroweb-service-admin</module>
    <module>zeroweb-service-dev</module>
    <module>zeroweb-service-file</module>
    <module>zeroweb-service-open</module>
  </modules>

  <properties>
    <maven.compiler.release>25</maven.compiler.release>
    <!-- 内部依赖版本 -->
    <zeroweb-proto.version>0.11.0</zeroweb-proto.version>
    <zeroweb-starter.version>0.11.0</zeroweb-starter.version>
    <!-- 依赖版本 -->
    <sa-token.version>1.45.0</sa-token.version>
    <!-- 应用端口号 -->
    <http.port>8080</http.port>
    <grpc.port>9090</grpc.port>
    <management.port>8081</management.port>
    <spring-boot.run.main-class/>
    <!-- Testcontainers -->
    <testcontainers.postgresql.url>
      jdbc:tc:postgresql:18-alpine:///postgres
    </testcontainers.postgresql.url>
  </properties>

  <dependencyManagement>
    <dependencies>
      <dependency>
        <groupId>cn.dev33</groupId>
        <artifactId>sa-token-bom</artifactId>
        <version>${sa-token.version}</version>
        <type>pom</type>
        <scope>import</scope>
      </dependency>
    </dependencies>
  </dependencyManagement>

  <dependencies>
    <dependency>
      <groupId>io.github.xezzon</groupId>
      <artifactId>zeroweb-spring-boot-starter</artifactId>
      <version>${zeroweb-starter.version}</version>
    </dependency>
    <dependency>
      <groupId>cn.hutool</groupId>
      <artifactId>hutool-core</artifactId>
      <version>${hutool.version}</version>
      <optional>true</optional>
    </dependency>
    <!-- web 相关 -->
    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter-web</artifactId>
    </dependency>
    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter-validation</artifactId>
    </dependency>
    <dependency>
      <groupId>org.springdoc</groupId>
      <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
    </dependency>
    <dependency>
      <groupId>cn.dev33</groupId>
      <artifactId>sa-token-spring-boot4-starter</artifactId>
    </dependency>
    <!-- 数据库相关 -->
    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter-data-jpa</artifactId>
    </dependency>
    <dependency>
      <groupId>org.postgresql</groupId>
      <artifactId>postgresql</artifactId>
    </dependency>
    <dependency>
      <groupId>com.mysql</groupId>
      <artifactId>mysql-connector-j</artifactId>
    </dependency>
    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter-liquibase</artifactId>
    </dependency>
    <!-- 工具类 -->
    <dependency>
      <groupId>org.mapstruct</groupId>
      <artifactId>mapstruct</artifactId>
    </dependency>
    <dependency>
      <groupId>com.github.therapi</groupId>
      <artifactId>therapi-runtime-javadoc</artifactId>
    </dependency>
    <!-- 运维相关 -->
    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter-actuator</artifactId>
    </dependency>
    <!-- 测试相关 -->
    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter-test</artifactId>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.testcontainers</groupId>
      <artifactId>testcontainers</artifactId>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.testcontainers</groupId>
      <artifactId>testcontainers-postgresql</artifactId>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.junit.platform</groupId>
      <artifactId>junit-platform-launcher</artifactId>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.junit.vintage</groupId>
      <artifactId>junit-vintage-engine</artifactId>
      <scope>test</scope>
    </dependency>
    <!-- 仅编译时有效的依赖 -->
    <dependency>
      <groupId>org.projectlombok</groupId>
      <artifactId>lombok</artifactId>
      <scope>provided</scope>
    </dependency>
    <dependency>
      <groupId>org.mapstruct</groupId>
      <artifactId>mapstruct-processor</artifactId>
      <scope>provided</scope>
    </dependency>
    <dependency>
      <groupId>org.hibernate.orm</groupId>
      <artifactId>hibernate-processor</artifactId>
      <scope>provided</scope>
    </dependency>
    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-configuration-processor</artifactId>
      <scope>provided</scope>
    </dependency>
    <dependency>
      <groupId>com.github.therapi</groupId>
      <artifactId>therapi-runtime-javadoc-scribe</artifactId>
      <scope>provided</scope>
    </dependency>
  </dependencies>

  <build>
    <plugins>
      <plugin>
        <groupId>org.codehaus.mojo</groupId>
        <artifactId>license-maven-plugin</artifactId>
        <configuration>
          <licenseName>lgpl_v3</licenseName>
          <organizationName>ZeroWeb</organizationName>
          <copyrightOwners>xezzon</copyrightOwners>
          <inceptionYear>2024</inceptionYear>
          <addJavaLicenseAfterPackage>false</addJavaLicenseAfterPackage>
          <ignoreLastDate>true</ignoreLastDate>
          <emptyLineAfterHeader>true</emptyLineAfterHeader>
          <extraExtensions>
            <proto>java</proto>
          </extraExtensions>
        </configuration>
        <executions>
          <execution>
            <id>check-license-and-copyright</id>
            <phase>validate</phase>
          </execution>
          <execution>
            <id>add-third-party-license</id>
            <phase>generate-resources</phase>
            <goals>
              <goal>add-third-party</goal>
            </goals>
            <configuration>
              <outputDirectory>${project.build.outputDirectory}/META-INF</outputDirectory>
              <thirdPartyFilename>NOTICE</thirdPartyFilename>
            </configuration>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-resources-plugin</artifactId>
        <executions>
          <execution>
            <id>add-license</id>
            <phase>generate-resources</phase>
            <goals>
              <goal>copy-resources</goal>
            </goals>
            <configuration>
              <resources>
                <resource>
                  <directory>${maven.multiModuleProjectDirectory}</directory>
                  <includes>
                    <include>COPYING</include>
                    <include>COPYING.LESSER</include>
                  </includes>
                </resource>
              </resources>
              <outputDirectory>${project.build.outputDirectory}/META-INF</outputDirectory>
            </configuration>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-deploy-plugin</artifactId>
        <configuration>
          <skip>true</skip>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-maven-plugin</artifactId>
      </plugin>
    </plugins>
  </build>

  <profiles>
    <profile>
      <!-- 发布微服务应用时使用的配置。 -->
      <id>docker</id>
      <properties>
        <!-- JavaAgent 存放路径 -->
        <agent-extraction-root>${maven.multiModuleProjectDirectory}/javaagent</agent-extraction-root>
        <!-- JavaAgent 在Docker中的路径 -->
        <agent-path>/opt/agent</agent-path>
        <workdir>/app</workdir>
        <!--suppress UnresolvedMavenProperty -->
        <docker.host>${env.DOCKER_REGISTRY}</docker.host>
        <image.version>${project.version}</image.version>
        <!-- JavaAgent 名称 -->
        <opentelemetry-javaagent.name>
          opentelemetry-javaagent-${opentelemetry-instrumentation.version}.jar
        </opentelemetry-javaagent.name>
        <otel-ali-extension.name>ot-java-agent-extension-1.28.0.jar</otel-ali-extension.name>
      </properties>
      <build>
        <plugins>
          <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-dependency-plugin</artifactId>
            <executions>
              <execution>
                <!-- 拷贝 OpenTelemetry javaagent -->
                <id>copy-opentelemetry-javaagent</id>
                <phase>install</phase>
                <goals>
                  <goal>copy</goal>
                </goals>
                <configuration>
                  <artifactItems>
                    <artifactItem>
                      <groupId>io.opentelemetry.javaagent</groupId>
                      <artifactId>opentelemetry-javaagent</artifactId>
                      <version>${opentelemetry-instrumentation.version}</version>
                    </artifactItem>
                  </artifactItems>
                </configuration>
              </execution>
            </executions>
          </plugin>
          <!-- 使用 jib-maven-plugin 将微服务发布到 Docker registry -->
          <plugin>
            <groupId>com.google.cloud.tools</groupId>
            <artifactId>jib-maven-plugin</artifactId>
            <executions>
              <execution>
                <id>deploy-image</id>
                <phase>deploy</phase>
                <goals>
                  <goal>build</goal>
                </goals>
              </execution>
            </executions>
            <configuration>
              <from>
                <image>eclipse-temurin:${maven.compiler.release}-jre</image>
                <platforms>
                  <platform>
                    <architecture>amd64</architecture>
                    <os>linux</os>
                  </platform>
                  <platform>
                    <architecture>arm64</architecture>
                    <os>linux</os>
                  </platform>
                  <platform>
                    <architecture>riscv64</architecture>
                    <os>linux</os>
                  </platform>
                </platforms>
              </from>
              <to>
                <image>${docker.host}/${project.artifactId}:${image.version}</image>
                <tags>
                  <tag>latest</tag>
                </tags>
              </to>
              <container>
                <environment>
                  <OTEL_EXPORTER_OTLP_PROTOCOL>grpc</OTEL_EXPORTER_OTLP_PROTOCOL>
                  <OTEL_SERVICE_NAME>${project.artifactId}</OTEL_SERVICE_NAME>
                  <OTEL_JAVAAGENT_ENABLED>false</OTEL_JAVAAGENT_ENABLED>
                  <OTEL_JAVA_EXTENSIONS>
                    ${agent-path}/${otel-ali-extension.name}
                  </OTEL_JAVA_EXTENSIONS>
                </environment>
                <ports>
                  <port>${http.port}</port>
                </ports>
                <volumes>
                  <volume>${workdir}/resources</volume>
                  <volume>${agent-path}</volume>
                </volumes>
                <jvmFlags>
                  <jvmFlag>-javaagent:${agent-path}/${opentelemetry-javaagent.name}</jvmFlag>
                  <jvmFlag>-XX:+UseZGC</jvmFlag>
                </jvmFlags>
                <appRoot>${workdir}</appRoot>
                <workingDirectory>${workdir}</workingDirectory>
                <format>Docker</format>
                <mainClass>${spring-boot.run.main-class}</mainClass>
                <labels>
                  <maven.artifact>
                    ${project.groupId}:${project.artifactId}:${project.version}
                  </maven.artifact>
                </labels>
              </container>
              <extraDirectories>
                <paths>
                  <path>
                    <from>${project.build.directory}/dependency</from>
                    <includes>
                      <include>${opentelemetry-javaagent.name}</include>
                    </includes>
                    <into>${agent-path}</into>
                  </path>
                  <path>
                    <from>${agent-extraction-root}</from>
                    <into>${agent-path}</into>
                  </path>
                </paths>
              </extraDirectories>
            </configuration>
          </plugin>
        </plugins>
      </build>
    </profile>
    <profile>
      <!-- 未指定测试数据库类型时，默认使用 PostgreSQL，使用该配置方便开发者本地运行单元测试。 -->
      <id>default-test-db</id>
      <activation>
        <property>
          <name>!db.type</name>
        </property>
      </activation>
      <properties>
        <db.type>postgresql</db.type>
        <db.url>${testcontainers.postgresql.url}</db.url>
      </properties>
    </profile>
    <profile>
      <!-- 使用 PostgreSQL 数据库进行单元测试时使用的配置文件 -->
      <id>postgresql</id>
      <activation>
        <property>
          <name>db.type</name>
          <value>postgresql</value>
        </property>
      </activation>
      <properties>
        <db.type>postgresql</db.type>
        <db.url>${testcontainers.postgresql.url}</db.url>
      </properties>
    </profile>
    <profile>
      <!-- 使用 MySQL 数据库进行单元测试时使用的配置文件 -->
      <id>mysql</id>
      <activation>
        <property>
          <name>db.type</name>
          <value>mysql</value>
        </property>
      </activation>
      <properties>
        <db.type>mysql</db.type>
        <db.url>jdbc:tc:mysql:8:///test?TC_MY_CNF=mysql</db.url>
      </properties>
      <dependencies>
        <dependency>
          <groupId>org.testcontainers</groupId>
          <artifactId>testcontainers-mysql</artifactId>
          <scope>test</scope>
        </dependency>
      </dependencies>
    </profile>
    <profile>
      <id>openapi</id>
      <activation>
        <file>
          <exists>src</exists>
        </file>
        <property>
          <name>openapi.enabled</name>
          <value>true</value>
        </property>
      </activation>
      <properties>
        <jmx.port>9001</jmx.port>
      </properties>
      <dependencies>
        <dependency>
          <groupId>com.h2database</groupId>
          <artifactId>h2</artifactId>
        </dependency>
      </dependencies>
      <build>
        <plugins>
          <plugin>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-maven-plugin</artifactId>
            <configuration>
              <jmxPort>${jmx.port}</jmxPort>
            </configuration>
            <executions>
              <execution>
                <id>start</id>
                <phase>pre-integration-test</phase>
                <goals>
                  <goal>start</goal>
                </goals>
                <configuration>
                  <systemPropertyVariables>
                    <spring.datasource.url>jdbc:h2:mem:zeroweb</spring.datasource.url>
                    <spring.datasource.driver-class-name>
                      org.h2.Driver
                    </spring.datasource.driver-class-name>
                    <spring.jpa.hibernate.ddl-auto>none</spring.jpa.hibernate.ddl-auto>
                    <spring.liquibase.enabled>false</spring.liquibase.enabled>
                    <springdoc.show-actuator>false</springdoc.show-actuator>
                    <springdoc.use-management-port>false</springdoc.use-management-port>
                  </systemPropertyVariables>
                  <environmentVariables>
                    <JDBC_TYPE>h2</JDBC_TYPE>
                    <ZEROWEB_ROOT_PASSWORD>random</ZEROWEB_ROOT_PASSWORD>
                    <ZEROWEB_FS_BASEPATH>/tmp/zeroweb/upload</ZEROWEB_FS_BASEPATH>
                  </environmentVariables>
                </configuration>
              </execution>
              <execution>
                <id>stop</id>
                <phase>post-integration-test</phase>
                <goals>
                  <goal>stop</goal>
                </goals>
              </execution>
            </executions>
          </plugin>
          <plugin>
            <groupId>org.springdoc</groupId>
            <artifactId>springdoc-openapi-maven-plugin</artifactId>
            <executions>
              <execution>
                <phase>integration-test</phase>
                <goals>
                  <goal>generate</goal>
                </goals>
                <configuration>
                  <apiDocsUrl>http://localhost:${http.port}/v3/api-docs</apiDocsUrl>
                  <outputDir>${project.reporting.outputDirectory}</outputDir>
                  <outputFileName>openapi.json</outputFileName>
                </configuration>
              </execution>
            </executions>
          </plugin>
        </plugins>
      </build>
    </profile>
  </profiles>
</project>
